--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
                         href="https://www.w3schools.com/w3css/tryw3css_templates_gourmet_catering.htm#contact">Contact</a>
                 </li>
             </div>
-            <!-- <img src="https://www.w3schools.com/w3images/hamburger.jpg" alt="Hamburger Catering" width="1600" height="800"> -->
+            
 
         </div>
         <!-- end header -->
 
         <!-- begin banner -->
         <div id="banner">
-
+            <img src="https://www.w3schools.com/w3images/hamburger.jpg" alt="Hamburger Catering">
+            <div id="img_name"><h1>Le Catering</h1></div>
         </div>
         <!-- end banner -->
 
