--- a/index.html
+++ b/index.html
@@ -39,13 +39,43 @@
         <!-- begin banner -->
         <div id="banner">
             <img src="https://www.w3schools.com/w3images/hamburger.jpg" alt="Hamburger Catering">
-            <div id="img_name"><h1>Le Catering</h1></div>
+            <div id="img_name">Le Catering</div>
         </div>
         <!-- end banner -->
 
         <!-- begin content -->
         <div id="content">
-
+            <div id="about">
+                <img id="about-img" src="https://www.w3schools.com/w3images/tablesetting2.jpg">
+                <div id="about-infor">
+                    <div id="about-tittle">About Catering</div>
+                    <div id="about-extra-tittle">Tradition since 1889 </div>
+                    <div id="about-para1"> The Catering was founded in blabla by Mr. Smith in lorem ipsum dolor sit amet, consectetur 
+                        adipiscing elit consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore\
+                            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
+                            ea commodo consequat. Duis aute iruredolor in reprehenderit in voluptate velit esse cillum dolore eu 
+                            fugiat nulla pariatur.We only use <span>seasonal</span> ingredients.</div>
+                    <div id="about-para2">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est 
+                        laborum consectetur adipiscing elit, sed do eiusmod temporincididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                </div>
+            </div>
+            <!-- <hr> -->
+            <!-- <div id="menu">
+                <div id="menu-tittle">Our Menu</div>
+                <div class="menu-dish-name">Bread Basket</div>
+                <div class="menu-dish-infor">Assortment of fresh baked fruit breads and muffins 5.50</div>
+                <div class="menu-dish-name">Honey Almond Granola with Fruits</div>
+                <div class="menu-dish-infor">Natural cereal of honey toasted oats, raisins, almonds and dates 7.00</div>
+                <div class="menu-dish-name">Belgian Waffle</div>
+                <div class="menu-dish-infor">Vanilla flavored batter with malted flour 7.50</div>
+                <div class="menu-dish-name">Scrambled eggs</div>
+                <div class="menu-dish-infor">Scrambled eggs, roasted red pepper and garlic, with green onions 7.50</div>
+                <div class="menu-dish-name">Blueberry Pancakes</div>
+                <div class="menu-dish-infor">With syrup, butter and lots of berries 8.50</div>
+                <div id="menu-img"><img src="https://www.w3schools.com/w3images/tablesetting.jpg"></div>
+            </div> -->
+           
         </div>
         <!-- end content -->
 
