--- a/index.html
+++ b/index.html
@@ -39,25 +39,27 @@
         <!-- begin banner -->
         <div id="banner">
             <img src="https://www.w3schools.com/w3images/hamburger.jpg" alt="Hamburger Catering">
-            <div id="img_name">Le Catering</div>
+            <div id="img_name"><h1>Le Catering</h1></div>
         </div>
         <!-- end banner -->
 
         <!-- begin content -->
         <div id="content">
             <div id="about">
-                <img id="about-img" src="https://www.w3schools.com/w3images/tablesetting2.jpg">
+                <div id="img">
+                    <img id="about-img" src="https://www.w3schools.com/w3images/tablesetting2.jpg">
+                </div>
                 <div id="about-infor">
-                    <div id="about-tittle">About Catering</div>
-                    <div id="about-extra-tittle">Tradition since 1889 </div>
-                    <div id="about-para1"> The Catering was founded in blabla by Mr. Smith in lorem ipsum dolor sit amet, consectetur 
+                    <h1 id="about-tittle">About Catering</h1>
+                    <h5 id="about-extra-tittle">Tradition since 1889 </h5>
+                    <p id="about-para1"> The Catering was founded in blabla by Mr. Smith in lorem ipsum dolor sit amet, consectetur 
                         adipiscing elit consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore\
                             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
                             ea commodo consequat. Duis aute iruredolor in reprehenderit in voluptate velit esse cillum dolore eu 
-                            fugiat nulla pariatur.We only use <span>seasonal</span> ingredients.</div>
-                    <div id="about-para2">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est 
+                            fugiat nulla pariatur.We only use <span>seasonal</span> ingredients.</p>
+                    <p id="about-para2">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est 
                         laborum consectetur adipiscing elit, sed do eiusmod temporincididunt ut labore et dolore magna aliqua. 
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
             </div>
             <!-- <hr> -->
