--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
             <div id="menu">
                 <div id="menu-infor">
                     <h1 id="menu-tittle">Our Menu</h1>
-            <h4 class="menu-dish-name">Bread Basket</h4>
-            <p class="menu-dish-infor">Assortment of fresh baked fruit breads and muffins 5.50</p>
-            <h4 class="menu-dish-name">Honey Almond Granola with Fruits</h4>
-            <div class="menu-dish-infor">Natural cereal of honey toasted oats, raisins, almonds and dates 7.00</p>
-            <h4 class="menu-dish-name">Belgian Waffle</h4>
-            <div class="menu-dish-infor">Vanilla flavored batter with malted flour 7.50</p>
-            <h4 class="menu-dish-name">Scrambled eggs</h4>
-            <div class="menu-dish-infor">Scrambled eggs, roasted red pepper and garlic, with green onions 7.50</p>
-            <h4 class="menu-dish-name">Blueberry Pancakes</h4>
-            <div class="menu-dish-infor">With syrup, butter and lots of berries 8.50</p>
+                    <h4 class="menu-dish-name">Bread Basket</h4>
+                    <p class="menu-dish-infor">Assortment of fresh baked fruit breads and muffins 5.50</p>
+                    <h4 class="menu-dish-name">Honey Almond Granola with Fruits</h4>
+                    <p class="menu-dish-infor">Natural cereal of honey toasted oats, raisins, almonds and dates 7.00</p>
+                    <h4 class="menu-dish-name">Belgian Waffle</h4>
+                    <p class="menu-dish-infor">Vanilla flavored batter with malted flour 7.50</p>
+                    <h4 class="menu-dish-name">Scrambled eggs</h4>
+                    <p class="menu-dish-infor">Scrambled eggs, roasted red pepper and garlic, with green onions 7.50</p>
+                    <h4 class="menu-dish-name">Blueberry Pancakes</h4>
+                    <p class="menu-dish-infor">With syrup, butter and lots of berries 8.50</p>
                 </div>
                 <div id="menu-img"><img src="https://www.w3schools.com/w3images/tablesetting.jpg"></div>
             </div>
