--- a/index.html
+++ b/index.html
@@ -79,14 +79,27 @@
                 </div>
                 <div id="menu-img"><img src="https://www.w3schools.com/w3images/tablesetting.jpg"></div>
             </div>
+            <hr>
+            <div id="contact">
+                <h1>Contact</h1>
+                <p id="contact-first-infor">We offer full-service catering for any event, large or small. We understand your needs and we will cater 
+                    the food to satisfy the biggerst criteria of them all, both look and taste. Do not hesitate to contact us.</p>
+                <p id="contact-second-infor"><b>Catering Service, 42nd Living St, 43043 New York, NY</b></p>
+                <p id="contact-third-infor">You can also contact us by phone 00553123-2323 or email catering@catering.com, or you can send us a message here:</p>
+                <input type="text" placeholder="Name">
+                <input type="text" placeholder="How many people">
+                <input type="date" >
+                <input type="text" placeholder="Message\Special Requirements">
+                <p id="contact-button"><button>SEND MESSAGE</button></p>
+            </div>
            
         </div>
         <!-- end content -->
 
         <!-- begin footer -->
-        <div id="footer">
-
-        </div>
+        <!-- <div id="footer">
+            <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp"></a></p>
+        </div> -->
         <!-- end footer -->
     </div>
 </body>
