--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
         <!-- end content -->
 
         <!-- begin footer -->
-        <!-- <div id="footer">
-            <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp"></a></p>
+        <div id="footer">
+            <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp">w3.css</a></p>
         </div> -->
-        <!-- end footer -->
+        <!-- end footer
     </div>
 </body>
 
